--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ratsch0k.github.io",
   "version": "0.1.0",
   "private": false,
+  "license": "MIT",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -14,6 +15,9 @@
   },
   "devDependencies": {
     "@types/react": "17.0.8",
+    "autoprefixer": "^10.2.6",
+    "postcss": "^8.3.0",
+    "tailwindcss": "^2.1.2",
     "typescript": "4.3.2"
   }
 }
