--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "next export -o docs"
+    "export": "next export"
   },
   "dependencies": {
     "next": "10.2.3",
