--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "export": "next export"
   },
   "dependencies": {
+    "i18next": "^20.4.0",
     "next": "10.2.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-click-away-listener": "^2.0.3",
+    "react-dom": "17.0.2",
+    "react-i18next": "^11.11.4"
   },
   "devDependencies": {
     "@types/react": "17.0.8",
