--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "i18next": "^20.4.0",
+    "i18next-browser-languagedetector": "^6.1.2",
     "next": "10.2.3",
     "react": "17.0.2",
     "react-click-away-listener": "^2.0.3",
