--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@types/react": "17.0.8",
     "autoprefixer": "^10.2.6",
+    "babel-plugin-preval": "^5.0.0",
     "postcss": "^8.3.0",
     "tailwindcss": "^2.1.2",
     "typescript": "4.3.2"
