--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,7 @@
 {
   "presets": ["next/babel"],
-  "plugins": ["babel-plugin-preval"]
+  "plugins": [
+    "babel-plugin-preval",
+    "inline-react-svg"
+  ]
 }
