--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "export": "next export"
   },
   "dependencies": {
+    "@types/color-convert": "^2.0.0",
+    "babel-plugin-inline-react-svg": "^2.0.1",
+    "color-convert": "^2.0.1",
     "i18next": "^20.4.0",
     "i18next-browser-languagedetector": "^6.1.2",
     "next": "10.2.3",
@@ -20,6 +23,7 @@
   },
   "devDependencies": {
     "@types/react": "17.0.8",
+    "@types/react-dom": "^17.0.11",
     "autoprefixer": "^10.2.6",
     "babel-plugin-preval": "^5.0.0",
     "postcss": "^8.3.0",
