--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "next export"
+    "export": "next export",
+    "eslint": "eslint --ext .ts,.tsx pages components"
   },
   "dependencies": {
     "@types/color-convert": "^2.0.0",
@@ -24,8 +25,12 @@
   "devDependencies": {
     "@types/react": "17.0.8",
     "@types/react-dom": "^17.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
     "autoprefixer": "^10.2.6",
     "babel-plugin-preval": "^5.0.0",
+    "eslint": "^8.7.0",
+    "eslint-plugin-react": "^7.28.0",
     "postcss": "^8.3.0",
     "tailwindcss": "^2.1.2",
     "typescript": "4.3.2"
