--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "10.2.3",
     "react": "17.0.2",
     "react-click-away-listener": "^2.0.3",
+    "react-device-detect": "^2.2.2",
     "react-dom": "17.0.2",
     "react-i18next": "^11.11.4"
   },
