Fixed missing run step in gh-pages.yml

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -17,3 +17,4 @@ jobs:
         env:
           URL: ${{ github.repositoryUrl }}
           PAGES_BRANCH: gh-pages
+        run: ./scripts/publish-to-gh-pages.sh
