--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -16,6 +16,6 @@ jobs:
       - uses: actions/checkout@v3
       - name: Run publishing script
         env:
-          URL: "git@github:${{ github.repository }}"
+          URL: "git@github.com:${{ github.repository }}"
           PAGES_BRANCH: gh-pages
         run: ./scripts/publish-to-gh-pages.sh
