--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   release:
     name: Release the new version
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     environment: release
     steps:
       - uses: actions/checkout@v3
